@@ -121,6 +121,7 @@ AMANDA_PROG_VDUMP_VRESTORE
 AMANDA_PROG_DUMP_RESTORE
 AMANDA_PROG_GNUTAR
 AMANDA_PROG_STAR
+AMANDA_PROG_SUNTAR
 AMANDA_PROG_SAMBA_CLIENT
 AMANDA_CHECK_USE_RUNDUMP
 
