@@ -91,6 +91,7 @@ $SERVER_HOST_KEY_FILE = "@SERVER_HOST_KEY_FILE@";
 $SERVER_HOST_PRINCIPAL = "@SERVER_HOST_PRINCIPAL@";
 $SSH_SECURITY = "@SSH_SECURITY@";
 $STAR = "@STAR@";
+$SUNTAR = "@SUNTAR@";
 $TICKET_LIFETIME = "@TICKET_LIFETIME@";
 $UNCOMPRESS_OPT = "@UNCOMPRESS_OPT@";
 $UNCOMPRESS_PATH = "@UNCOMPRESS_PATH@";
