@@ -1,3 +1,11 @@
+2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* config/amanda/dumpers.m4: Add AMANDA_PROG_SUNTAR, --with-suntar=??
+	* configure.in: Use AMANDA_PROG_SUNTAR.
+	* perl/Amanda/Constants.pm.in: Define $Amanda::Constants::SUNTAR
+	* application-src/amsuntar.pl: Use $Amanda::Constants::SUNTAR,
+	                               Add SUNTAR-PATH property.
+	* man/xml-source/amsuntar.8.xml: Document SUNTAR-PATH property.
+
 2011-03-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/find.c: Compute maxparts from the list of part.
 
